# bexpand

./: Cargo.toml  README.md
src/: lib.rs  parser.rs  sequence.rs
