[package]
name = 'bexpand'
version = '1.1.0'
edition = '2021'
authors = ['Taylor C. Richberger <taywee@gmx.com>']
description = 'Bash-style brace expansion'
readme = 'README.md'
license = 'MPL-2.0'
keywords = ['parser', 'shell', 'template', 'string']
categories = ['command-line-interface', 'parser-implementations']
repository = 'https://codeberg.org/Taywee/bexpand'

[dependencies]
itertools = '0.11.0'
nom = '7.1.3'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

